# LabForDataAnalysis

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  config.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
config/: config.py
src/: data_preprocessing.py  evaluation.py  model_training.py  visualization.py
tests/: test_data_preprocessing.py
