[metadata]
name = trees
version = 0.1
author = Daniil Oberlev
author_email = denioberlev@gmail.com
description = A machine learning project using decision trees and logistic regression.
long_description = file: README.md
long_description_content_type = text/markdown
url =
python_requires = >=3.6

[options]
packages = find:
include_package_data = true

[options.extras_require]
dev =
    pytest>=6.0
    flake8>=3.9
    black>=21.0

[options.packages.find]
where = src

[options.install_requires]
scikit-learn>=0.24
imbalanced-learn>=0.8
numpy>=1.19
pandas>=1.1
matplotlib>=3.3
seaborn>=0.11

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
